--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,18 @@
 #--------------------------#
-# Magento Default Files    #
+# Wubinworks home          #
 #--------------------------#
 
-/PATCH_*.sh
-
-/app/etc/local.xml
-
-/media/*
-!/media/.htaccess
-
-!/media/customer
-/media/customer/*
-!/media/customer/.htaccess
-
-!/media/dhl
-/media/dhl/*
-!/media/dhl/logo.jpg
-
-!/media/downloadable
-/media/downloadable/*
-!/media/downloadable/.htaccess
-
-!/media/xmlconnect
-/media/xmlconnect/*
-
-!/media/xmlconnect/custom
-/media/xmlconnect/custom/*
-!/media/xmlconnect/custom/ok.gif
-
-!/media/xmlconnect/original
-/media/xmlconnect/original/*
-!/media/xmlconnect/original/ok.gif
-
-!/media/xmlconnect/system
-/media/xmlconnect/system/*
-!/media/xmlconnect/system/ok.gif
-
-/var/*
-!/var/.htaccess
-
-!/var/package
-/var/package/*
-!/var/package/*.xml
-
+*.bak
+**.bak.**
+*.bat
+*.cmd
+*.dll
+[dD]esktop.ini
+.DS_STORE
+*.exe
+*.lnk
+*.org
+*.orgin
+*.temp
+[tT]humbs.db
+*.tmp
