Add image for Wubinworks_PriceFormatter

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-#--------------------------#
-# Wubinworks home          #
-#--------------------------#
+# Wubinworks home
 
 *.bak
-**.bak.**
 *.bat
 *.cmd
 *.dll
